# cognitex

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  cognitex_evolution_blueprint.md  docker-compose.yml  pyproject.toml
docker/postgres/: init.sql
docs/: PHASE3_STATUS.md  PHASE4_INTEGRATION_BLUEPRINT.md  PHASE4_MEMORY_BLUEPRINT.md  ROADMAP.md  agent-architecture.md  architecture.mmd  claude_codereview_v10.md  cognitex-blueprint-v2.md  cognitex-blueprint.txt  cognitex_phase_3_blueprint.md  cognitex_phase_3_blueprint_detail.md  gemini_cognitex_codereview_v11.md  gemini_cognitex_codereview_v12.md  gemini_cognitex_codereview_v14.md  gemini_cognitex_codereview_v14b.md  gemini_cognitex_codereview_v15.md  gemini_cognitex_codereview_v16.md  gemini_cognitex_codereview_v2.md  gemini_cognitex_codereview_v3.md  gemini_cognitex_codereview_v3b.md  gemini_cognitex_codereview_v4.md  gemini_cognitex_codereview_v4b.md  gemini_cognitex_codereview_v6.md  gemini_cognitex_codereview_v6b.md  gemini_cognitex_codereview_v7.md  gemini_cognitex_codereview_v7b.md  gemini_cognitex_codereview_v8.md  gemini_cognitex_codereview_v8b.md  gemini_cognitex_codereview_v9.md  gemini_cognitex_digital_twin_review.md  idd_1.txt  life-os-blueprint.docx  neo4j-queries.md  openclaw-comparison.md  preprint-cognitex.md  preprint-cognitex.tex  proactive-agent-plan.md
docs/anthropic_resources/: skills_yt_transcript.txt
docs/code_review_111225/: claude_review.md  gemini_review.md
docs/general/: Full Tutorial Automate Your Life with Claude Code in 50 Min  Teresa TorresuBJdwRPO1QE_20251221.txt
docs/idd_agents/: 3 ODDLY Useful Claude Code Repos No One Talks Aboutnu3VDVzAVaE_20250623_indydevdan_personalAssistants.txt  5 Agent PATTERNS to SIMPLIFY Your Agentic Coding (Claude Code, Gemini CLI, MCP)XojxD7hfaD4_20250825_indydevdan_personalAssistants.txt  AI Coding DEVLOG Claude Code has CHANGED Software Engineeringd-SyGA0Avtw_20250310_indydevdan_personalAssistants.txt  AI Coding is NOT ENOUGH Claude Code's NEXT LEVEL Agentic Coding FEATURE2TIXl2rlA6Q_20250428_indydevdan_personalAssistants.txt  Agentic Claude Code 3 Codebase Folders for TOP 1% AI CodinghGg3nWp7afg_20250505_indydevdan_personalAssistants.txt  Agentic Coding ENDGAME Build your Claude Code SDK Custom Agents6wR6xblSays_20250922_indydevdan_personalAssistants.txt  Agentic Prompt Engineering with Claude Code (For you, your team, and your AGENTS)luqKnexhpFs_20250915_indydevdan_personalAssistants.txt  Agentic Workflows BEYOND the Chat UI with Claude Code SDK and Gemini Nano BananagyjoXC8lzIw_20250901_indydevdan_personalAssistants.txt  CRACKED Aider AND Claude Code Combo. Zuck ships Llama4. Gemini 2.5 Pro is SOTAQzZ97noEapA_20250407_indydevdan_personalAssistants.txt  Claude 4 ADVANCED AI Coding How I PARALLELIZE Claude Code with Git Worktreesf8RnRuaxee8_20250526_indydevdan_personalAssistants.txt  Claude Code 2.0 Agentic Coding No, other agents aren't even close.nGhsgdQplHw_20251006_indydevdan_personalAssistants.txt  Claude Code INSIDERS Codex FIRST Look and 5 AI Coding INSIGHTSy-_xknNOapo_20250519_indydevdan_personalAssistants.txt  (+25 more)
src/cognitex/: __init__.py  config.py  (+1 more)
tests/: __init__.py  conftest.py  test_agentmail.py  test_bootstrap.py  test_clinical_firewall.py  test_commitment_ledger.py  test_email_triage.py  test_gemini_schema.py  test_memory_distillation.py  test_skill_authoring.py  test_skill_evolution.py  test_skill_feedback_router.py  test_skills.py  test_slash_commands.py
tools/cognitex-sync/: README.md  pyproject.toml
tools/cognitex-sync/cognitex_sync/: __init__.py  cli.py  config.py  sync.py
(+159 files in other folders)
